--- a/CSS/portail_main.css
+++ b/CSS/portail_main.css
@@ -1,11 +1,11 @@
-.profil[b-p2i6fi6whn]{
+/*.profil[b-p2i6fi6whn]{
     background-color: #F47A20 !important;
 }
 
 div .bg-primary[b-p2i6fi6whn]{
     background-color: #F47A20 !important;
 }
-
+*/
 .img-logo{
     max-width: 115px;
     max-height: 52px;
